 * Split XML::GDOME and XML::DOM specific parts of EPrints::XML into two
    sub files. One or the other is required.
 * Removed all uses of hasAttribute as it's not available in XML::DOM
 * Added phrases for tools names.
 * Removed unused components eg. BlisterBar
 * Renaming components to shorter names.

2006-06-26 cjg

 * Split style sheet into parts. Began process of making rational class names
    for all css used in eprints.
 * Removed debug code from workflow.pm
 * Rejigged eprints workflow to be closer to what we plan for 3.0
 * Shortend names of several component modules to be more manageable.
 * Moved vlit.css to sit in same dir as other css files, but didn't rename 
    the classes as they are reasonably prefixed and pretty much a seperate  
    system.
 * Moved the workflow surround styles into the new scheme.
 * Moved the search form and results styles into the new scheme.
 * Moved the blister bar style into the new scheme.
 * Moved the old style input form components and buttons into the new scheme.
 * Moved the toolbox and messages styles over.
 * Tidied up last style in tabs 
 * Changed requiredness of a field to be a red star icon. Not css'd yet.
 * Sorted out style of required stars.
 * removed *'s from phrases. May put them back in later.
 * Fixed bug in View::Owner which auto forwarded to View::Editor due to
    inherriting from View
 * Added a phrase for adding required icon to a label
 * Moved example style to ep_form_example
 * Added a ep_ prefix to problem_field classes

2006-06-27 cjg

 * Added alt tag to required Star.
 * Added a mini scripting language for collapsing workflow (and citations)
 * Changed to using attributes for 'required' rather than elements
 * Fixed bug which meant database opened too many connections.
 * Moved install dir to /opt/eprints3 and made the scripts expect this when
    running from SVN checkout.
 * Multi fields now validate required contents.
 * Multi fields now available as problem_field targets.